examples/test/testpolicy4658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4658
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key13: value21
      key9: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value18
      podSelector:
        matchLabels:
          key34: value13
          key27: value3
          key40: value14
